--- a/Visualisation.ipynb
+++ b/Visualisation.ipynb
@@ -11,8 +11,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
     "import scipy\n",
+    "import seaborn as sns\n",
     "\n",
     "df=pd.read_csv('all_subjects.csv')"
    ]
@@ -35,27 +35,6 @@
     "#max_delay_nochange=df[(df.delay < 300) & (df.delay > 250) & (df.result ==1)& (df.condition==0)]\n",
     "#max_delay_change=df[(df.delay < 300) & (df.delay > 250) & (df.result ==1)& (df.condition==1)]\n",
     "\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "#sns.displot(data=df, x=df[(df.delay < 150) & (df.delay > 0)].delay,bins=[100,110,120,130,140,150], kde=True)\n",
-    "#sns.histplot(data=df, x=df[(df.delay < 150) & (df.delay > 0)].delay,bins=[100,110,120,130,140,150],binwidth=8, stat='count',kde=True, hue=per,color='blu')\n",
-    "#plt.hist(low_delay.delay, alpha=0.5, label='x')\n",
-    "#plt.hist(low_delay.latency, alpha=0.5, label='y')\n",
-    "#plt.legend(loc='upper right')\n",
-    "#plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -95,7 +74,7 @@
     }
    ],
    "source": [
-    "import seaborn as sns\n",
+    "\n",
     "\n",
     "\n",
     "fig, axes = plt.subplots(3, 2, figsize=(10, 8))\n",
@@ -174,7 +153,7 @@
     "# High delay with change plotting\n",
     "# Plotting histplot\n",
     "sns.histplot(ax=axes[2,0], x=high_delay_change.delay,y=high_delay_change.latency, color='orange')\n",
-    "axes[2,0].set_title('High Delay without Change (250-400)')\n",
+    "axes[2,0].set_title('High Delay with Change (250-400)')\n",
     "# Setting yticks and ticklabels\n",
     "axes[2,0].set_yticks([np.percentile(high_delay_change.latency,2.5),high_delay_change.latency.median(),1000,np.percentile(high_delay_change.latency,97.2),1800])\n",
     "axes[2,0].set_yticklabels(['2.5 P','Median',1000,'97.2 P',1800])\n",
